<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="correct_snackbar">Correct!</string>
    <string name="incorrect_snackbar">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_patagonia">Patagonia is the capital of Columbia.</string>
    <string name="question_annapurna">Annapurna is a mountain in the Himalayas.</string>
    <string name="question_everest">Mt. Everest is the most dangerous climbable mountain in the world.</string>
    <string name="question_belize">Belize is the smallest recognised country in the world.</string>
    <string name="question_venezuela">Venezuela shares a border with the Ivory Coast</string>
    <string name="question_portMoresby">Port Moresby is the capital of Papua New Guinea.</string>
    <string name="question_kiritimati">Kiritimati is the first country to celebrate the new year.</string>
    <string name="question_moldova">Transinistria is a breakaway state of Moldova</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_snackbar">Cheating is wrong. ┌(▀Ĺ̯▀)┐</string>
</resources>